[tool.poetry]
name = "ml for trading"
version = "0.0.1"
description = "Machine Learning for Trading"
authors = ["Saumik Dana <dana.spk5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
yfinance = "^0.2.32"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
